# purple_chili

./: .env.example  .gitignore  README.md  docker-compose-development-debug.yaml  docker-compose-development.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.txt
app/: main.py
app/api/routes/: hero.py
app/core/: postgres.py  settings.py  templates.py
app/models/: hero.py
app/templates/: base.html.j2  menu.html.j2
app/templates/hero/: list.html.j2
docker/purple_chili_app/: Dockerfile
project_files/: mindmap.md
purple_chili/app/: main.py
purple_chili/app/api/: routers.py
purple_chili/app/api/routes/: hero.py
purple_chili/app/core/: postgres.py  settings.py
