[project]
name = "purple-chili"
requires-python = "==3.12"
dependencies = [
  "fastapi[standard]==0.112.0",
  "fasthx==1.1.1",
  "logfire[fastapi,httpx,jinja2,psycopg,requests,sqlalchemy,starlette,system-metrics,urllib,urllib3]==0.50.1",
  "psycopg[binary,pool]==3.2.1",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "sqlmodel==0.0.21",
]

[project.optional-dependencies]
dev = [
  "debugpy==1.8.5",
  "pytest==8.3.2",
  "ruff==0.5.7",
  "uv==0.2.34",
]

[tool.purple-chili]
DAISYUI_VERSION = "4.12.10"
FEATHER_ICONS_VERSION = "4.29.2"
HTMX_VERSION = "2.0.2"

[tool.ruff]
line-length = 120
target-version = "py312"
# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.select = ["ALL"]
lint.ignore = ["COM812", "D203", "D212", "D415", "FIX002", "TD003"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104", "F401"]
